<resources>
    <string name="app_name">学习系统</string>
    <string name="login_show_pwd">显示密码</string>
    <string name="login">登录</string>
    <string name="copyright">\@Copyright 牛书敏</string>
    <string name="register">注册</string>
    <string name="submit">提交</string>
    <string name="username_hint">请输入账号</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="register_password_hint">6-8位数字或字母</string>
    <string name="title_activity_admin">管理员</string>
    <string name="user_manage">用户管理</string>
    <string name="question_publish">发布试题</string>
    <string name="question_manage">试题管理</string>
    <string name="exit">退出</string>
    <string name="is_manager">是否管理员</string>
    <string name="edit_user_info">编辑用户信息</string>
    <string name="delete">删除</string>
    <string name="password">密码：%1$s</string>
    <string name="questions">题库</string>
    <string name="exam_count">已测试%1$s次</string>
    <string name="question_count">共%1$s道试题</string>
    <string name="level">难易度:%1$s</string>
    <string name="next_question">下一题</string>
    <string name="question_index">第%1$s题</string>
    <string name="incorrect">正确</string>
    <string name="correct">错误</string>
    <string name="choice_question">选择题</string>
    <string name="judgment_question">判断题</string>
    <string name="questions_name">名称</string>
    <string name="questions_description">描述</string>
    <string name="questions_level">难度</string>
    <string name="questions_name_hint">题库名称(10字以内)</string>
    <string name="questions_description_hint">题库描述(20字以内)</string>
    <string name="questions_level_hint">请输入1-5数字</string>
    <string name="confirm_and_edit_question">确认，开始录题</string>
    <string name="questions_edit">新建题库</string>
    <string name="question_edit_subject_hint">录入题目(限140字以内)</string>
    <string name="question_edit_option_hint">录入选项</string>
    <string name="question_edit">编辑题目</string>
    <string name="start_exam">开始测试</string>
    <string name="scan_question">浏览试题</string>
    <string name="exam_history">测试记录</string>
    <string name="invalid_user">用户名或密码错误</string>
    <string name="cant_input_empty_userinfo">用户名或密码不能为空</string>
    <string name="register_success">注册成功！</string>
    <string name="registed_username">该用户名已被注册</string>
    <string name="empty_username">用户名不存在</string>
    <string name="modify_success">修改成功！</string>
    <string name="at_least_one_manager">至少存在一个管理员！</string>
    <string name="delete_success">删除成功！</string>
    <string name="complete_the_blank">请输入完整的信息</string>
    <string name="exist_questions_name">该题库已存在</string>
    <string name="at_least_two_ansers">至少有两个选项</string>
    <string name="choose_answer">请选择一个答案</string>
    <string name="empty_answer">选中的答案不能为空</string>
    <string name="empty_subject">题目不能为空</string>
    <string name="changes_saved">已保存所有修改</string>
    <string name="no_more_question">已经是最后一题了</string>
    <string name="complete">完成</string>
    <string name="bingo">回答正确</string>
    <string name="unbingo">回答错误，正确答案：%1$s</string>
    <string name="title_activity_pdf">阅读文献</string>
    <string name="title_activity_exam_history">ExamHistoryActivity</string>
    <string name="no_questions">暂时还没有题库</string>
    <string name="random_questions">已随机为你抽取了第%1$s套题</string>
    <string name="file_choose">录入资料</string>
    <string name="new_documents">新建</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="documents_list">资料列表</string>
    <string name="documents_name_hint">请输入资料名称</string>
    <string name="max_image_remind">最多添加四张图片</string>
    <string name="min_image_remind">至少添加一张图片</string>
    <string name="empty_name">名称不能为空</string>
    <string name="documents">资料</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="questions_delete_confirm">确认删除题库： %1$s ?</string>
    <string name="add_img">添加图片</string>
    <string name="display_img">浏览图片</string>
    <string name="your_answer">回答错误，你的选择是： %1$s</string>
</resources>
