<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/login_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingTop="50dp"
        android:src="@drawable/login_icon" />

    <EditText
        android:id="@+id/login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_icon"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="50dp"
        android:background="@null"
        android:hint="@string/username_hint"
        android:drawableLeft="@drawable/login_icon_user"
        android:drawablePadding="10dp" />

    <View
        android:id="@+id/login_username_bottom_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/login_username"
        android:layout_marginLeft="33dp"
        android:layout_marginRight="33dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/login_input_lin_pressed" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_username_bottom_line"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="30dp"
        android:background="@null"
        android:drawableLeft="@drawable/login_icon_password"
        android:hint="@string/login_password_hint"
        android:drawablePadding="10dp"
        android:inputType="textPassword" />

    <View
        android:id="@+id/login_pwd_bottom_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/login_password"
        android:layout_marginLeft="33dp"
        android:layout_marginRight="33dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/login_input_lin_pressed" />

    <CheckBox
        android:id="@+id/login_is_show_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_pwd_bottom_line"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="30dp"
        android:button="@drawable/checkbox_selector"
        android:text="@string/login_show_pwd"
        android:textColor="@color/c3_d"
        android:textSize="@dimen/t4" />

    <Button
        android:id="@+id/login_bt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/login_is_show_pwd"
        android:layout_marginLeft="38dp"
        android:layout_marginRight="38dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_common_day"
        android:text="@string/login"
        android:textColor="@color/c9_d"
        android:textSize="@dimen/t1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/copyright"
        android:textColor="@color/c4_d" />
</RelativeLayout>
