<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="30dp">

        <EditText
            android:id="@+id/questions_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="45dp"
            android:layout_marginTop="30dp"
            android:layout_toRightOf="@+id/questions_name_text"
            android:background="@null"
            android:maxLength="10"
            android:hint="@string/questions_name_hint" />

        <TextView
            android:id="@+id/questions_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/questions_name"
            android:layout_alignTop="@+id/register_username"
            android:layout_centerVertical="true"
            android:text="@string/questions_name"
            android:textColor="@color/c4_d"
            android:textSize="@dimen/t3" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="33dp"
        android:layout_marginRight="33dp"
        android:background="@drawable/login_input_lin_pressed" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="30dp">

        <EditText
            android:id="@+id/questions_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="45dp"
            android:layout_marginTop="30dp"
            android:layout_toRightOf="@+id/questions_description_text"
            android:background="@null"
            android:maxLength="20"
            android:hint="@string/questions_description_hint" />

        <TextView
            android:id="@+id/questions_description_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/questions_description"
            android:layout_alignTop="@+id/register_username"
            android:layout_centerVertical="true"
            android:text="@string/questions_description"
            android:textColor="@color/c4_d"
            android:textSize="@dimen/t3" />

    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="33dp"
        android:layout_marginRight="33dp"
        android:background="@drawable/login_input_lin_pressed" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="30dp">

        <EditText
            android:id="@+id/questions_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="45dp"
            android:layout_marginTop="30dp"
            android:layout_toRightOf="@+id/questions_level_text"
            android:background="@null"
            android:hint="@string/questions_level_hint"
            android:inputType="number"
            android:maxLength="1" />

        <TextView
            android:id="@+id/questions_level_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/questions_level"
            android:layout_alignTop="@+id/register_username"
            android:layout_centerVertical="true"
            android:text="@string/questions_level"
            android:textColor="@color/c4_d"
            android:textSize="@dimen/t3" />

    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="33dp"
        android:layout_marginRight="33dp"
        android:background="@drawable/login_input_lin_pressed" />

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="38dp"
        android:layout_marginRight="38dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_common_day"
        android:text="@string/confirm_and_edit_question"
        android:textColor="@color/c9_d"
        android:textSize="@dimen/t1" />
</LinearLayout>