<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edit_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="30dp"
        android:background="@null"
        android:hint="@string/username_hint"
        android:drawableLeft="@drawable/login_icon_user"
        android:drawablePadding="10dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="33dp"
        android:layout_marginRight="33dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/login_input_lin_pressed" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="30dp"
        android:background="@null"
        android:hint="@string/register_password_hint"
        android:drawableLeft="@drawable/login_icon_password"
        android:drawablePadding="10dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="33dp"
        android:layout_marginRight="33dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/login_input_lin_pressed" />

    <CheckBox
        android:id="@+id/edit_is_manager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_password"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="30dp"
        android:button="@drawable/checkbox_selector"
        android:text="@string/is_manager"
        android:textColor="@color/c3_d"
        android:textSize="@dimen/t4" />

</LinearLayout>