<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/question_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:text="@string/choice_question"
        android:textSize="@dimen/t2"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/subject_label"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/question_type"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/question_edit_bg"
        android:gravity="center"
        android:hint="@string/question_edit_subject_hint"
        android:maxLength="140" />

    <LinearLayout
        android:id="@+id/option_label_1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/subject_label"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/option_1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:button="@drawable/checkbox_selector"
            android:textSize="@dimen/t3" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/question_edit_bg"
            android:hint="@string/question_edit_option_hint"
            android:maxLength="16"
            android:paddingLeft="10dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/option_label_2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/option_label_1"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/option_2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:button="@drawable/checkbox_selector"
            android:textSize="@dimen/t3" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/question_edit_bg"
            android:hint="@string/question_edit_option_hint"
            android:maxLength="16"
            android:paddingLeft="10dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/option_label_3"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/option_label_2"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/option_3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:button="@drawable/checkbox_selector"
            android:textSize="@dimen/t3" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/question_edit_bg"
            android:hint="@string/question_edit_option_hint"
            android:maxLength="16"
            android:paddingLeft="10dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/option_label_4"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/option_label_3"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/option_4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:button="@drawable/checkbox_selector"
            android:textSize="@dimen/t3" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/question_edit_bg"
            android:hint="@string/question_edit_option_hint"
            android:maxLength="16"
            android:paddingLeft="10dp" />
    </LinearLayout>

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="38dp"
        android:layout_marginRight="38dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_common_day"
        android:text="@string/next_question"
        android:textColor="@color/c9_d"
        android:textSize="@dimen/t1" />
</RelativeLayout>
